--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 	<script type="text/javascript">
 		lime.embed ("Funkin", "openfl-content", 1280, 720, { parameters: {} });
 	</script>
+	<script>
+	</script>
 	
 </body>
 </html>
